Prod-EU/force-app/main/default/objects/CyberSource_API__mdt/CyberSource_API__mdt.object-meta.xml
<CustomObject>
    <description>Stores settings and keys for Cybersource</description>
    <label>CyberSource API</label>
    <pluralLabel>CyberSource API</pluralLabel>
</CustomObject>