Prod-EU/force-app/main/default/objects/CyberSource_API__mdt/fields/endPoint__c.field-meta.xml
<CustomField>
    <fullName>endPoint__c</fullName>
    <label>endPoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>