Prod-EU/force-app/main/default/objects/CyberSource_API__mdt/fields/Enviornment__c.field-meta.xml
<CustomField>
    <fullName>Enviornment__c</fullName>
    <label>Enviornment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dev</fullName>
                <default>true</default>
                <label>Dev</label>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>Prod</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>