Prod-EU/force-app/main/default/objects/CyberSource_API__mdt/fields/keyid__c.field-meta.xml
<CustomField>
    <fullName>keyid__c</fullName>
    <label>keyid</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>