Prod-EU/force-app/main/default/objects/CyberSource_API__mdt/fields/merchant_id__c.field-meta.xml
<CustomField>
    <fullName>merchant_id__c</fullName>
    <description>merchant_id</description>
    <label>merchant id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>