Prod-EU/force-app/main/default/objects/CyberSource_API__mdt/fields/profile_id__c.field-meta.xml
<CustomField>
    <fullName>profile_id__c</fullName>
    <label>profile_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>