Prod-EU/force-app/main/default/objects/CyberSource_API__mdt/fields/reqBody__c.field-meta.xml
<CustomField>
    <fullName>reqBody__c</fullName>
    <label>reqBody</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>