Prod-EU/force-app/main/default/objects/CyberSource_API__mdt/fields/secretKey__c.field-meta.xml
<CustomField>
    <fullName>secretKey__c</fullName>
    <label>secretKey</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>