Prod-EU/force-app/main/default/objects/CyberSource_API__mdt/listViews/Cybersoure_API_Details.listView-meta.xml
<ListView>
    <fullName>Cybersoure_API_Details</fullName>
    <columns>MasterLabel</columns>
    <columns>CurrencyIsoCode__c</columns>
    <columns>DeveloperName</columns>
    <columns>Enviornment__c</columns>
    <columns>endPoint__c</columns>
    <columns>keyid__c</columns>
    <columns>secretKey__c</columns>
    <columns>profile_id__c</columns>
    <columns>merchant_id__c</columns>
    <filterScope>Everything</filterScope>
    <label>Cybersoure API Details</label>
    <language>en_US</language>
</ListView>